gcc/testsuite/rust/rustc/ui/suggestions/issue-85945-check-where-clause-before-suggesting-unsized_dg.rs
// Regression test for #85945: Don't suggest `?Sized` bound if an explicit
// `Sized` bound is already in a `where` clause.
fn foo<T>(_: &T) where T: Sized {}
fn bar() { foo(""); }
// { dg-error ".E0277." "" { target *-*-* } .-1 }

pub fn main() {
}

